--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Pagina de tareas</title>
-    <link rel="stylesheet" href="/docs/iindex.css">
+    <link rel="stylesheet" href="/index.css">
 
 </head>
 <header>
@@ -11,6 +11,6 @@
 </header>
 <body>
     <h1>Tareas!!!!!</h1>
-    <a href="/A01783208_TC2005B/Web/Tarea1HTML/hmtl_cheat_sheet.html">Tarea 1 Hoja de HTML</a>
+    <a href="https://saikou17.github.io/A01783208_TC2005B/Web/Tarea1HTML/hmtl_cheat_sheet.html">Tarea 1 Hoja de HTML</a>
 </body>
 </html>
