--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Pagina de tareas</title>
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="https://saikou17.github.io/A01783208_TC2005B/index.css">
 
 </head>
 <header>
