--- a/Web/Tarea1HTML/hmtl_cheat_sheet.html
+++ b/Web/Tarea1HTML/hmtl_cheat_sheet.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>Cheet sheet Html</title>
-        <link rel="stylesheet" href="A01783208_TC2005B/Web/Tarea1HTML/html_cheat_sheet.css">
+        <link rel="stylesheet" href="https://saikou17.github.io/A01783208_TC2005B/Web/Tarea1HTML/html_cheat_sheet.css">
     </head>
     <nav class="crumbs">
         <ol>
