--- a/Web/Front/Html/css_cheat_sheet.html
+++ b/Web/Front/Html/css_cheat_sheet.html
@@ -2,17 +2,15 @@
 <html lang="en">
     <head>
         <title>Document</title>
-        <link rel="stylesheet" href="/Front/Css/css_cheat_sheet.css">
+        <link rel="stylesheet" href="/Web/Front/Css/css_cheat_sheet.css">
     </head>
     <body>
         <div class="container">
-            <h1>Hello Cascading Style Sheet CSS!</h1>
-            <h1 id="second_h1">Second h1</h1>
-            <h2>First h1</h2>
+            <h1>Cascading Style Sheet Homework CSS!</h1>
         </div>
         <div class="container">
-            <h1 >Second Container</h1>
-            <p>Ayuda va muy rapido no puedo mantener el paso</p>
+            <h1 class="subs">Border</h1>
+            <p></p>
         </div>
     </body>
 </html>
