Cambios pagina css

--- a/Web/Front/Html/css_cheat_sheet.html
+++ b/Web/Front/Html/css_cheat_sheet.html
@@ -10,7 +10,63 @@
         </div>
         <div class="container">
             <h1 class="subs">Border</h1>
-            <p></p>
+            <p>La propiedad CSS abreviada de borde establece el borde de un elemento. Establece los valores de border-width, border-style y border-color.</p>
+        </div>
+        <div id="container1">
+            <h1 class="subs">Border-left, Border-right, Border-top, Border-bottom</h1>
+            <p>Los border-left,right,top y bottom son utilizados para modificar los border izquierdo, derecho, arriba y abajo de manera independiente</p>
+        </div>
+        <div id="container2">
+            <h1 class="subs">Border Radius</h1>
+            <p>La propiedad CSS border-radius redondea las esquinas del borde exterior de un elemento. Puede establecer un solo radio para hacer esquinas circulares o dos radios para hacer esquinas elípticas.</p>
+        </div>
+        <div class="container">
+            <h1 class="subs">Color</h1>
+            <p>Ingrese texto</p>
+        </div>
+        <div class="container">
+            <h1 class="subs">Font</h1>
+            <p>Ingrese texto</p>
+        </div>
+        <div class="container">
+            <h1 class="subs">Font-Family</h1>
+            <p>Ingrese texto</p>
+        </div>
+        <div class="container">
+            <h1 class="subs">Font-Style,Font-Weight</h1>
+            <p>Ingrese texto</p>
+        </div>
+        <div class="container">
+            <h1 class="subs">Width,Height</h1>
+            <p>Ingrese texto</p>
+        </div>
+        <div class="container">
+            <h1 class="subs">List-Style</h1>
+            <p>Ingrese texto</p>
+        </div>
+        <div class="container">
+            <h1 class="subs">Margin</h1>
+            <p>Ingrese texto</p>
+        </div>
+        <div class="container">
+            <h1 class="subs">Padding</h1>
+            <p>Ingrese texto</p>
+        </div>
+        <div class="container">
+            <h1 class="subs">Overflow</h1>
+            <p>Ingrese texto</p>
+        </div>
+        <div class="container">
+            <h1 class="subs">Display</h1>
+            <p>Ingrese texto</p>
+        </div>
+        <div class="container">
+            <h1 class="subs">Position</h1>
+            <p>Ingrese texto</p>
+        </div>
+        <div class="container">
+            <h1 class="subs">Filter</h1>
+            <p>Ingrese texto</p>
         </div>
     </body>
-</html>
+</html> 
