--- a/Web/Front/Html/css_cheat_sheet.html
+++ b/Web/Front/Html/css_cheat_sheet.html
@@ -2,8 +2,11 @@
 <html lang="en">
     <head>
         <title>Document</title>
-        <link rel="stylesheet" href="/Web/Front/Css/css_cheat_sheet.css">
+        <link rel="stylesheet" href="https://saikou17.github.io/A01783208_TC2005B/Web/Front/Css/css_cheat_sheet.css">
     </head>
+    <header>
+        <a id="Encabezadoimg">Tarea CSS</a>
+    </header>
     <body>
         <div class="container">
             <h1>Cascading Style Sheet Homework CSS!</h1>
@@ -22,51 +25,70 @@
         </div>
         <div class="container">
             <h1 class="subs">Color</h1>
-            <p>Ingrese texto</p>
+            <p id="Parrafo">La propiedad color CSS establece el valor de color de primer plano del texto y las decoraciones de texto de un elemento, y establece el valor de color actual.
+            </p>
         </div>
         <div class="container">
             <h1 class="subs">Font</h1>
-            <p>Ingrese texto</p>
+            <p id="Parrafo1">La propiedad abreviada CSS de fuente establece todas las diferentes propiedades de la fuente de un elemento. Alternativamente, establece la fuente de un elemento en una fuente del sistema.</p>
         </div>
         <div class="container">
             <h1 class="subs">Font-Family</h1>
-            <p>Ingrese texto</p>
+            <p id="Parrafo2">La propiedad CSS font-family especifica una lista priorizada de uno o más nombres de familia de fuentes y/o nombres de familia genéricos para el elemento seleccionado.</p>
         </div>
         <div class="container">
             <h1 class="subs">Font-Style,Font-Weight</h1>
-            <p>Ingrese texto</p>
+            <p id="Parrafo3">El estilo y peso de la fuente son modificados por estos selectores.La propiedad CSS de estilo de fuente establece si una fuente debe tener un estilo normal, cursiva u oblicua de su familia de fuentes.La propiedad CSS font-weight establece el peso (o negrita) de la fuente.</p>
         </div>
-        <div class="container">
+        <div id="borde1">
             <h1 class="subs">Width,Height</h1>
-            <p>Ingrese texto</p>
+            <p>La propiedad CSS ancho establece el ancho de un elemento. De forma predeterminada, establece el ancho del área de contenido, pero si el tamaño del cuadro se establece en border-box, establece el ancho del área del borde.La propiedad CSS de altura especifica la altura de un elemento. De forma predeterminada, la propiedad define la altura del área de contenido.</p>
         </div>
         <div class="container">
             <h1 class="subs">List-Style</h1>
-            <p>Ingrese texto</p>
+            <p>La propiedad abreviada CSS de estilo de lista le permite establecer todas las propiedades de estilo de lista a la vez.</p>
+            <ol class="listas">
+                <li>Valorant</li>
+                <li>Rocket League</li>
+                <li>Genshin Impact</li>
+                <li>Overwatch</li>
+            </ol>
         </div>
         <div class="container">
             <h1 class="subs">Margin</h1>
-            <p>Ingrese texto</p>
+            <p>La propiedad abreviada margin CSS establece el área de margen en los cuatro lados de un elemento.</p>
         </div>
         <div class="container">
             <h1 class="subs">Padding</h1>
-            <p>Ingrese texto</p>
+            <p>La propiedad abreviada padding CSS establece el área de relleno en los cuatro lados de un elemento a la vez.</p>
         </div>
         <div class="container">
             <h1 class="subs">Overflow</h1>
-            <p>Ingrese texto</p>
+            <p id="Parrafo4">La propiedad abreviada CSS de desbordamiento establece el comportamiento deseado para el desbordamiento de un elemento, es decir, cuando el contenido de un elemento es demasiado grande para caber en su contexto de formato de bloque, en ambas direcciones.</p>
         </div>
         <div class="container">
             <h1 class="subs">Display</h1>
-            <p>Ingrese texto</p>
+            <p>La propiedad CSS de visualización establece si un elemento se trata como un bloque o un elemento en línea y el diseño utilizado para sus elementos secundarios, como el diseño de flujo, la cuadrícula o la flexión.</p>
+            <article class="articulos">
+                <span>Elemento1</span>
+                <span>Elemento2</span>
+                <span>Elemento3</span>
+            </article>
         </div>
         <div class="container">
             <h1 class="subs">Position</h1>
-            <p>Ingrese texto</p>
+            <p>La propiedad position CSS establece cómo se coloca un elemento en un documento. Las propiedades superior, derecha, inferior e izquierda determinan la ubicación final de los elementos posicionados.</p>
+            <div class="container">
+                <span class="spans">Elemento1</span>
+                <span class="spans">Elemento2</span>
+                <span class="spans">Elemento3</span>
+                <span class="spans">Elemento4</span>
+            </div>
         </div>
         <div class="container">
             <h1 class="subs">Filter</h1>
-            <p>Ingrese texto</p>
+            <p>La propiedad CSS del filtro aplica efectos gráficos como desenfoque o cambio de color a un elemento. Los filtros se usan comúnmente para ajustar la representación de imágenes, fondos y bordes.</p>
+            <img id="imagen" src="https://i.pinimg.com/736x/7b/af/5d/7baf5db19bcc2a3b08301a26b04c6ab0.jpg">
         </div>
     </body>
 </html> 
