--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </header>
 <body>
     <h1>Tareas!!!!!</h1>
-    <a href="https://saikou17.github.io/A01783208_TC2005B/Web/Tarea1HTML/hmtl_cheat_sheet.html">Tarea 1 Hoja de HTML</a>
-    <a href="http://saikou17.github.io/A01783208_TC2005B/Web/Front/css_cheat_sheet.html">Tarea 2 Hoja de CSS</a>
+    <ol>
+        <li><a href="https://saikou17.github.io/A01783208_TC2005B/Web/Tarea1HTML/hmtl_cheat_sheet.html">Tarea 1 Hoja de HTML</a></li>
+        <li><a href="https://saikou17.github.io/A01783208_TC2005B/Web/Front/css_cheat_sheet.html">Tarea 2 Hoja de CSS</a></li>
+    </ol>
 </body>
 </html>
