Pruebas fondo de color

--- a/Web/Front/Html/css_cheat_sheet.html
+++ b/Web/Front/Html/css_cheat_sheet.html
@@ -7,7 +7,7 @@
     <header>
         <a id="Encabezadoimg">Tarea CSS</a>
     </header>
-    <body>
+    <body id="body1">
         <div class="container">
             <h1>Cascading Style Sheet Homework CSS!</h1>
         </div>
