--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <h1>Tareas!!!!!</h1>
     <ol>
-        <li><a href="https://saikou17.github.io/A01783208_TC2005B/Web/Tarea1HTML/hmtl_cheat_sheet.html">Tarea 1 Hoja de HTML</a></li>
+        <li><a href="./A01783208_TC2005B/Web/Tarea1HTML/hmtl_cheat_sheet.html">Tarea 1 Hoja de HTML</a></li>
         <li><a href="https://saikou17.github.io/A01783208_TC2005B/Web/Front/Html/css_cheat_sheet.html">Tarea 2 Hoja de CSS</a></li>
     </ol>
 </body>
