--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Pagina de tareas</title>
-    <link rel="stylesheet" href="https://saikou17.github.io/A01783208_TC2005B/index.css">
+    <link rel="stylesheet" href="./A01783208_TC2005B/index.css">
 
 </head>
 <header>
@@ -13,7 +13,7 @@
     <h1>Tareas!!!!!</h1>
     <ol>
         <li><a href="./A01783208_TC2005B/Web/Tarea1HTML/hmtl_cheat_sheet.html">Tarea 1 Hoja de HTML</a></li>
-        <li><a href="https://saikou17.github.io/A01783208_TC2005B/Web/Front/Html/css_cheat_sheet.html">Tarea 2 Hoja de CSS</a></li>
+        <li><a href="./A01783208_TC2005B/Web/Front/Html/css_cheat_sheet.html">Tarea 2 Hoja de CSS</a></li>
     </ol>
 </body>
 </html>
