Entrega Final CSS

--- a/Web/Front/Html/css_cheat_sheet.html
+++ b/Web/Front/Html/css_cheat_sheet.html
@@ -23,6 +23,10 @@
             <h1 class="subs">Border Radius</h1>
             <p>La propiedad CSS border-radius redondea las esquinas del borde exterior de un elemento. Puede establecer un solo radio para hacer esquinas circulares o dos radios para hacer esquinas elípticas.</p>
         </div>
+        <div id="container3">
+            <h1 class="subs">Background-image</h1>
+            <p>Establece una imagen como fondo de pantalla</p>
+        </div>
         <div class="container">
             <h1 class="subs">Color</h1>
             <p id="Parrafo">La propiedad color CSS establece el valor de color de primer plano del texto y las decoraciones de texto de un elemento, y establece el valor de color actual.
