--- a/Web/Front/Html/css_cheat_sheet.html
+++ b/Web/Front/Html/css_cheat_sheet.html
@@ -25,7 +25,7 @@
         </div>
         <div id="container3">
             <h1 class="subs">Background-image</h1>
-            <p>Establece una imagen como fondo de pantalla</p>
+            <p id="Parrafo3">Establece una imagen como fondo de pantalla</p>
         </div>
         <div class="container">
             <h1 class="subs">Color</h1>
