Cambios en el index principal

--- a/Web/Front/Html/css_grid.html
+++ b/Web/Front/Html/css_grid.html
@@ -4,6 +4,9 @@
     <link href="/Web/Front/Css/css_grid_sheet.css" rel="stylesheet">
     <title>CSS Grid</title>
 </head>
+<header>
+    <a class="EncabezadoB" href="https://p4.wallpaperbetter.com/wallpaper/710/6/367/anime-living-room-anime-scenary-hd-wallpaper-preview.jpg">Tarea 3 CSS Grid</a>
+</header>
 <body>
     <div class="contenedor"> <!--Este div almacena mis elementos -->
         <div class="BloqueG">Elemento1</div> 
