--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <ol>
         <li><a href="./Web/Tarea1HTML/hmtl_cheat_sheet.html">Tarea 1 Hoja de HTML</a></li>
         <li><a href="./Web/Front/Html/css_cheat_sheet.html">Tarea 2 Hoja de CSS</a></li>
+        <li><a href="./Web/Front/Html/css_grid.html">Tarea 3 CSS Grid</a></li>
+
     </ol>
 </body>
 </html>
