--- a/Web/Front/Html/css_grid.html
+++ b/Web/Front/Html/css_grid.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="/Web/Front/Css/css_grid_sheet.css" rel="stylesheet">
+    <link href="/./Web/Front/Css/css_grid_sheet.css" rel="stylesheet">
     <title>CSS Grid</title>
 </head>
 <header>
