--- a/Web/Front/Html/PaginaWeb.html
+++ b/Web/Front/Html/PaginaWeb.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="/Web/Front/Css/PaginaWeb.css">
+        <link rel="stylesheet" href="https://saikou17.github.io/A01783208_TC2005B/Web/Front/Css/PaginaWeb.css">
         <title>Pagina Web</title>
     </head>
     <body id="contenedor"> <!--Contenedor que contiene a mis cinco boxes de mi web page-->
