--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <li><a href="./Web/Tarea1HTML/hmtl_cheat_sheet.html">Tarea 1 Hoja de HTML</a></li>
         <li><a href="./Web/Front/Html/css_cheat_sheet.html">Tarea 2 Hoja de CSS</a></li>
         <li><a href="./Web/Front/Html/css_grid.html">Tarea 3 CSS Grid</a></li>
-
+        <li><a href="./Web/Front/Html/PaginaWeb.html">Tarea 4 Simple Web Page</a></li>
     </ol>
 </body>
 </html>
