--- a/Web/Front/Html/JavaScriptPractica.html
+++ b/Web/Front/Html/JavaScriptPractica.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src=".../JavaS/JavaScriptPractica.js"></script>
+        <script src="./JavaScriptPractica.js"></script>
         <title>Ejercicios_JS</title>
     </head>
     <body>
