--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li><a href="./Web/Front/Html/css_cheat_sheet.html">Tarea 2 Hoja de CSS</a></li>
         <li><a href="./Web/Front/Html/css_grid.html">Tarea 3 CSS Grid</a></li>
         <li><a href="./Web/Front/Html/PaginaWeb.html">Tarea 4 Simple Web Page</a></li>
+        <li><a href="./Web/JavaS/JavaScriptPractica.js">Tarea 4 Simple Web Page</a></li>
     </ol>
 </body>
 </html>
