--- a/Web/Front/Html/JavaScriptPractica.html
+++ b/Web/Front/Html/JavaScriptPractica.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="/../../Web/JavaS/JavaScriptPractica.js"></script>
+        <script src="https://saikou17.github.io/A01783208_TC2005B/Web/JavaS/JavaScriptPractica.js"></script>
         <title>Ejercicios_JS</title>
     </head>
     <body>
