--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="./Web/Front/Html/css_grid.html">Tarea 3 CSS Grid</a></li>
         <li><a href="./Web/Front/Html/PaginaWeb.html">Tarea 4 Simple Web Page</a></li>
         <li><a href="./Web/Front/Html/JavaScriptPractica.html">Tarea 5 Introduccion a JavaScript</a></li>
+        <li><a href="./Web/Front/Html/DomIndex.html">Tarea 6 Actividad de ChatGPT</a></li>
     </ol>
 </body>
 </html>
