--- a/Web/Front/Html/DomIndex.html
+++ b/Web/Front/Html/DomIndex.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link type="text/css" rel="stylesheet" href="../css/eventos_dom.css">
     <script type="module" src="../js/eventos_dom.js"></script>
-    <script type="module" src="/Web/JavaS/DOMJava.js"></script>
+    <script type="module" src="./Web/JavaS/DOMJava.js"></script>
     <title>Eventos y Dom</title>
 </head>
 
