--- a/Web/Front/Html/DomIndex.html
+++ b/Web/Front/Html/DomIndex.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link type="text/css" rel="stylesheet" href="../css/eventos_dom.css">
-    <script type="module" src="../js/eventos_dom.js"></script>
-    <script type="module" src="../../JavaS/DOMJava.js"></script>
+    <link type="text/css" rel="stylesheet" href="/../Css/eventos_dom.css">
+    <script type="module" src="/../Web/JavaS/DOMJava.js"></script>
     <title>Eventos y Dom</title>
 </head>
 
