Tarea ChatGPT Completa

--- a/Web/Front/Html/DomIndex.html
+++ b/Web/Front/Html/DomIndex.html
@@ -71,7 +71,6 @@
         </form>
     </div>
 
-    <!--Debuguear funcion-->
     <div class="container">
         <p>3. Agrega el código para agregar una fila, o una columna, a la siguiente tabla al dar click al botón correspondiente.</p>
         <table id="sampleTable">
@@ -137,9 +136,55 @@
         <h2>Conclusiones</h2>
 
         <h4>Experiencia general</h4>
+        <p>La experiencia fue enriquecedora debido a que nos obliga a trabajar con las tecnologias o herramientas que estan realizando un cambio drastico en el esquema actual de trabajo.</p>
         <h4>¿Cuándo y para qué usarías ChatGPT y cuándo Copilot?</h4>
+        <p>ChatGPT lo usaria para realizar consultas que generalmente no encuentro en los navegadores actuales, generar codigo, debuguear codigo y realizar documentacion, ya que me permite optimizar mi tiempo de trabajo.</p>
+        <p>Copilot lo utilizaria de manera automatica para generar posibles lineas de codigo luego de llevar horas trabajando y obtner ideas de esta herramienta inteligente para implementar en mi solucion.</p>
         <h4>Ventajas de usar AI para programar</h4>
+        <p>Las ventajas al usar o programar con AI pueden variar entre el lenguaje de programacion que estes utilizando. Sin embargo, la AI a demostrado adaptarse a la forma de codificar de la persona para realizar un prediccion de lo que desea el usuario al momento de realizar codigo.</p>
         <h4>Desventajas de usar AI para programar</h4>
+        <p>Las desventajas mas claras al programar con AI es que la soluciones no son tan detalladas y precisas debido a que no posee el contexto completo del programa o problema por lo que puede tener demasiadas ambiguedad y no encontrar una solucion especifica.</p>
+    </div>
+
+    <div class="container">
+        <h2>Referencias</h2>
+
+        <p>
+            ¿Qué es el DOM?<br>
+            MDN Web Docs. (2021). <i>Introduction to the DOM</i>. <a href="https://developer.mozilla.org/en-US/docs/Web/API/Document_Object_Model/Introduction">https://developer.mozilla.org/en-US/docs/Web/API/Document_Object_Model/Introduction</a>.
+          </p>
+          <p>
+            ¿Qué es un nodo?<br>
+            W3C. (2019). <i>DOM - Document Object Model</i>. <a href="https://www.w3.org/TR/dom-core-1/#node">https://www.w3.org/TR/dom-core-1/#node</a>.
+          </p>
+          <p>
+            ¿Cómo se accede a un elemento del DOM?<br>
+            MDN Web Docs. (2021). <i>Introduction to the DOM</i>. <a href="https://developer.mozilla.org/en-US/docs/Web/API/Document_Object_Model/Introduction">https://developer.mozilla.org/en-US/docs/Web/API/Document_Object_Model/Introduction</a>.
+          </p>
+          <p>
+            ¿Cómo se modifica un elemento del DOM?<br>
+            MDN Web Docs. (2021). <i>Manipulating the DOM</i>. <a href="https://developer.mozilla.org/en-US/docs/Web/API/Document_Object_Model/Manipulating_the_DOM">https://developer.mozilla.org/en-US/docs/Web/API/Document_Object_Model/Manipulating_the_DOM</a>.
+          </p>
+          <p>
+            ¿Cuál es la diferencia entre getElementby* y querySelector*?<br>
+            MDN Web Docs. (2021). <i>Selecting DOM elements</i>. <a href="https://developer.mozilla.org/en-US/docs/Web/API/Document_Object_Model/Selecting_DOM_elements">https://developer.mozilla.org/en-US/docs/Web/API/Document_Object_Model/Selecting_DOM_elements</a>.
+          </p>
+          <p>
+            ¿Qué es un evento?<br>
+            MDN Web Docs. (2021). <i>Events</i>. <a href="https://developer.mozilla.org/en-US/docs/Web/API/Document_Object_Model/Events">https://developer.mozilla.org/en-US/docs/Web/API/Document_Object_Model/Events</a>.
+          </p>
+          <p>
+            ¿Qué es un listener?<br>
+            MDN Web Docs. (2021). <i>EventTarget.addEventListener()</i>. <a href="https://developer.mozilla.org/en-US/docs/Web/API/EventTarget/addEventListener">https://developer.mozilla.org/en-US/docs/Web/API/EventTarget/addEventListener</a>.
+          </p>
+          <p>
+            ¿Qué es un callback?<br>
+            MDN Web Docs. (2021). <i>Callback function</i>. <a href="https://developer.mozilla.org/en-US/docs/Glossary/Callback_function">https://developer.mozilla.org/en-US/docs/Glossary/Callback_function</a>.
+          </p>
+          <p>
+            ¿Qué es un objeto de evento?<br>
+            MDN Web Docs. (2021). <i>Event</i>. <a href="https://developer.mozilla.org/en-US/docs/Web/API/Event">https://developer.mozilla.org/en-US/docs/Web/API/Event</a>.
+          </p>
     </div>
 
 </body>
