--- a/Test API/public/html/index.html
+++ b/Test API/public/html/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <script type="module" src="../js/index.js"></script>
         <title>Hello Server</title>
     </head>
     <body>
         <p>
             Hello Server
+        </p>
+        <p id="fetch_result">
+            
         </p>
     </body>
 </html>
